exports[`invalid(1): a { --one: var(--two); --two: var(--one); } 1`] = `

  1 | a { --one: var(--two); --two: var(--one); }

`;

exports[`invalid(1): a { --one: var(--two); --two: var(--one); } 2`] = `

Message:
> 1 | a { --one: var(--two); --two: var(--one); }
    |                ^^^^^ Custom property \`--one\` is part of a dependency cycle.

`;

exports[`invalid(1): a { --one: var(--two); --two: var(--one); } 3`] = `

Message:
> 1 | a { --one: var(--two); --two: var(--one); }
    |                                   ^^^^^ Custom property \`--two\` is part of a dependency cycle.

`;

exports[`invalid(10): a { --a: 1px !important; --a: var(--b) !important; --b: var(--a); } 1`] = `

  1 | a { --a: 1px !important; --a: var(--b) !important; --b: var(--a); }

`;

exports[`invalid(10): a { --a: 1px !important; --a: var(--b) !important; --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: 1px !important; --a: var(--b) !important; --b: var(--a); }
    |                                   ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(10): a { --a: 1px !important; --a: var(--b) !important; --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: 1px !important; --a: var(--b) !important; --b: var(--a); }
    |                                                             ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(11): a { --a: var(--b) !IMPORTANT; --a: 1px; --b: var(--a); } 1`] = `

  1 | a { --a: var(--b) !IMPORTANT; --a: 1px; --b: var(--a); }

`;

exports[`invalid(11): a { --a: var(--b) !IMPORTANT; --a: 1px; --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(--b) !IMPORTANT; --a: 1px; --b: var(--a); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(11): a { --a: var(--b) !IMPORTANT; --a: 1px; --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(--b) !IMPORTANT; --a: 1px; --b: var(--a); }
    |                                                  ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(12): a { --a: var(--b) !\\69mportant; --a: 1px; --b: var(--a); } 1`] = `

  1 | a { --a: var(--b) !\\69mportant; --a: 1px; --b: var(--a); }

`;

exports[`invalid(12): a { --a: var(--b) !\\69mportant; --a: 1px; --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(--b) !\\69mportant; --a: 1px; --b: var(--a); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(12): a { --a: var(--b) !\\69mportant; --a: 1px; --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(--b) !\\69mportant; --a: 1px; --b: var(--a); }
    |                                                    ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(13): a { --\\61: V\\41R(--\\62); --b: var(--a); } 1`] = `

  1 | a { --\\61: V\\41R(--\\62); --b: var(--a); }

`;

exports[`invalid(13): a { --\\61: V\\41R(--\\62); --b: var(--a); } 2`] = `

Message:
> 1 | a { --\\61: V\\41R(--\\62); --b: var(--a); }
    |                  ^^^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(13): a { --\\61: V\\41R(--\\62); --b: var(--a); } 3`] = `

Message:
> 1 | a { --\\61: V\\41R(--\\62); --b: var(--a); }
    |                                   ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(14): a { --間隔: var(--色); --色: var(--間隔); } 1`] = `

  1 | a { --間隔: var(--色); --色: var(--間隔); }

`;

exports[`invalid(14): a { --間隔: var(--色); --色: var(--間隔); } 2`] = `

Message:
> 1 | a { --間隔: var(--色); --色: var(--間隔); }
    |               ^^^ Custom property \`--間隔\` is part of a dependency cycle.

`;

exports[`invalid(14): a { --間隔: var(--色); --色: var(--間隔); } 3`] = `

Message:
> 1 | a { --間隔: var(--色); --色: var(--間隔); }
    |                              ^^^^ Custom property \`--色\` is part of a dependency cycle.

`;

exports[`invalid(15): a { --a: var(/* before */ --b /* after */); --b: var(--a); } 1`] = `

  1 | a { --a: var(/* before */ --b /* after */); --b: var(--a); }

`;

exports[`invalid(15): a { --a: var(/* before */ --b /* after */); --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(/* before */ --b /* after */); --b: var(--a); }
    |                           ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(15): a { --a: var(/* before */ --b /* after */); --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(/* before */ --b /* after */); --b: var(--a); }
    |                                                      ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(16): a { --a: var(--b) var(--b); --b: var(--a); } 1`] = `

  1 | a { --a: var(--b) var(--b); --b: var(--a); }

`;

exports[`invalid(16): a { --a: var(--b) var(--b); --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(--b) var(--b); --b: var(--a); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(16): a { --a: var(--b) var(--b); --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(--b) var(--b); --b: var(--a); }
    |                                      ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(17): a { & > b { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | a { & > b { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(17): a { & > b { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | a { & > b { --a: var(--b); --b: var(--a); } }
    |                      ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(17): a { & > b { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | a { & > b { --a: var(--b); --b: var(--a); } }
    |                                     ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(18): @media (width > 1px) { a { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | @media (width > 1px) { a { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(18): @media (width > 1px) { a { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | @media (width > 1px) { a { --a: var(--b); --b: var(--a); } }
    |                                     ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(18): @media (width > 1px) { a { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | @media (width > 1px) { a { --a: var(--b); --b: var(--a); } }
    |                                                    ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(19): @supports (color: red) { a { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | @supports (color: red) { a { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(19): @supports (color: red) { a { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | @supports (color: red) { a { --a: var(--b); --b: var(--a); } }
    |                                       ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(19): @supports (color: red) { a { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | @supports (color: red) { a { --a: var(--b); --b: var(--a); } }
    |                                                      ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(2): a { --b: var(--a); --a: var(--b); } 1`] = `

  1 | a { --b: var(--a); --a: var(--b); }

`;

exports[`invalid(2): a { --b: var(--a); --a: var(--b); } 2`] = `

Message:
> 1 | a { --b: var(--a); --a: var(--b); }
    |              ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(2): a { --b: var(--a); --a: var(--b); } 3`] = `

Message:
> 1 | a { --b: var(--a); --a: var(--b); }
    |                             ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(20): @container (width > 1px) { a { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | @container (width > 1px) { a { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(20): @container (width > 1px) { a { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | @container (width > 1px) { a { --a: var(--b); --b: var(--a); } }
    |                                         ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(20): @container (width > 1px) { a { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | @container (width > 1px) { a { --a: var(--b); --b: var(--a); } }
    |                                                        ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(21): @layer base { a { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | @layer base { a { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(21): @layer base { a { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | @layer base { a { --a: var(--b); --b: var(--a); } }
    |                            ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(21): @layer base { a { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | @layer base { a { --a: var(--b); --b: var(--a); } }
    |                                           ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(22): @scope (.component) { a { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | @scope (.component) { a { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(22): @scope (.component) { a { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | @scope (.component) { a { --a: var(--b); --b: var(--a); } }
    |                                    ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(22): @scope (.component) { a { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | @scope (.component) { a { --a: var(--b); --b: var(--a); } }
    |                                                   ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(23): @keyframes grow { to { --a: var(--b); --b: var(--a); } } 1`] = `

  1 | @keyframes grow { to { --a: var(--b); --b: var(--a); } }

`;

exports[`invalid(23): @keyframes grow { to { --a: var(--b); --b: var(--a); } } 2`] = `

Message:
> 1 | @keyframes grow { to { --a: var(--b); --b: var(--a); } }
    |                                 ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(23): @keyframes grow { to { --a: var(--b); --b: var(--a); } } 3`] = `

Message:
> 1 | @keyframes grow { to { --a: var(--b); --b: var(--a); } }
    |                                                ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(24): a { --a: if(style(--enabled: yes): 1px; else: var(--b)); --b: var(--a); } 1`] = `

  1 | a { --a: if(style(--enabled: yes): 1px; else: var(--b)); --b: var(--a); }

`;

exports[`invalid(24): a { --a: if(style(--enabled: yes): 1px; else: var(--b)); --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: if(style(--enabled: yes): 1px; else: var(--b)); --b: var(--a); }
    |                                                   ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(24): a { --a: if(style(--enabled: yes): 1px; else: var(--b)); --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: if(style(--enabled: yes): 1px; else: var(--b)); --b: var(--a); }
    |                                                                   ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(25): a { --spacing: var(--spacing); } 1`] = `

  1 | a { --spacing: var(--spacing); }

`;

exports[`invalid(25): a { --spacing: var(--spacing); } 2`] = `

Message:
> 1 | a { --spacing: var(--spacing); }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(26): a { --spacing: calc(var(--spacing) + 1px); } 1`] = `

  1 | a { --spacing: calc(var(--spacing) + 1px); }

`;

exports[`invalid(26): a { --spacing: calc(var(--spacing) + 1px); } 2`] = `

Message:
> 1 | a { --spacing: calc(var(--spacing) + 1px); }
    |                         ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(27): a { --spacing: var(--spacing, 1px); } 1`] = `

  1 | a { --spacing: var(--spacing, 1px); }

`;

exports[`invalid(27): a { --spacing: var(--spacing, 1px); } 2`] = `

Message:
> 1 | a { --spacing: var(--spacing, 1px); }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(28): a { --spacing: var(--spacing,); } 1`] = `

  1 | a { --spacing: var(--spacing,); }

`;

exports[`invalid(28): a { --spacing: var(--spacing,); } 2`] = `

Message:
> 1 | a { --spacing: var(--spacing,); }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(29): a { --spacing: var(--other, var(--spacing)); } 1`] = `

  1 | a { --spacing: var(--other, var(--spacing)); }

`;

exports[`invalid(29): a { --spacing: var(--other, var(--spacing)); } 2`] = `

Message:
> 1 | a { --spacing: var(--other, var(--spacing)); }
    |                                 ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(3): a { --a: var(--b); --b: var(--c); --c: var(--a); } 1`] = `

  1 | a { --a: var(--b); --b: var(--c); --c: var(--a); }

`;

exports[`invalid(3): a { --a: var(--b); --b: var(--c); --c: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--c); --c: var(--a); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(3): a { --a: var(--b); --b: var(--c); --c: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--c); --c: var(--a); }
    |                             ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(3): a { --a: var(--b); --b: var(--c); --c: var(--a); } 4`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--c); --c: var(--a); }
    |                                            ^^^ Custom property \`--c\` is part of a dependency cycle.

`;

exports[`invalid(30): a { --other: 1px; --spacing: var(--other, var(--spacing)); } 1`] = `

  1 | a { --other: 1px; --spacing: var(--other, var(--spacing)); }

`;

exports[`invalid(30): a { --other: 1px; --spacing: var(--other, var(--spacing)); } 2`] = `

Message:
> 1 | a { --other: 1px; --spacing: var(--other, var(--spacing)); }
    |                                               ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(31): a { --spacing: var(--other, calc(var(--base, var(--spacing)) + 1px)); } 1`] = `

  1 | a { --spacing: var(--other, calc(var(--base, var(--spacing)) + 1px)); }

`;

exports[`invalid(31): a { --spacing: var(--other, calc(var(--base, var(--spacing)) + 1px)); } 2`] = `

Message:
> 1 | a { --spacing: var(--other, calc(var(--base, var(--spacing)) + 1px)); }
    |                                                  ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(32): a { --spacing: var(--spacing) var(--spacing, var(--spacing)); } 1`] = `

  1 | a { --spacing: var(--spacing) var(--spacing, var(--spacing)); }

`;

exports[`invalid(32): a { --spacing: var(--spacing) var(--spacing, var(--spacing)); } 2`] = `

Message:
> 1 | a { --spacing: var(--spacing) var(--spacing, var(--spacing)); }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(33): a { --spacing: var(--spacing); --color: var(--color); } 1`] = `

  1 | a { --spacing: var(--spacing); --color: var(--color); }

`;

exports[`invalid(33): a { --spacing: var(--spacing); --color: var(--color); } 2`] = `

Message:
> 1 | a { --spacing: var(--spacing); --color: var(--color); }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(33): a { --spacing: var(--spacing); --color: var(--color); } 3`] = `

Message:
> 1 | a { --spacing: var(--spacing); --color: var(--color); }
    |                                             ^^^^^^^ Custom property \`--color\` must not reference itself.

`;

exports[`invalid(34): a { --spacing: VAR(--spacing); } 1`] = `

  1 | a { --spacing: VAR(--spacing); }

`;

exports[`invalid(34): a { --spacing: VAR(--spacing); } 2`] = `

Message:
> 1 | a { --spacing: VAR(--spacing); }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(35): a { --spacing: var(/* before */ --spacing /* after */, 1px); } 1`] = `

  1 | a { --spacing: var(/* before */ --spacing /* after */, 1px); }

`;

exports[`invalid(35): a { --spacing: var(/* before */ --spacing /* after */, 1px); } 2`] = `

Message:
> 1 | a { --spacing: var(/* before */ --spacing /* after */, 1px); }
    |                                 ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(36): a { --spacing: var(--spacing) !important; } 1`] = `

  1 | a { --spacing: var(--spacing) !important; }

`;

exports[`invalid(36): a { --spacing: var(--spacing) !important; } 2`] = `

Message:
> 1 | a { --spacing: var(--spacing) !important; }
    |                    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(37): a { & > b { --spacing: var(--spacing); } } 1`] = `

  1 | a { & > b { --spacing: var(--spacing); } }

`;

exports[`invalid(37): a { & > b { --spacing: var(--spacing); } } 2`] = `

Message:
> 1 | a { & > b { --spacing: var(--spacing); } }
    |                            ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(38): @media (width > 1px) { a { --spacing: var(--spacing); } } 1`] = `

  1 | @media (width > 1px) { a { --spacing: var(--spacing); } }

`;

exports[`invalid(38): @media (width > 1px) { a { --spacing: var(--spacing); } } 2`] = `

Message:
> 1 | @media (width > 1px) { a { --spacing: var(--spacing); } }
    |                                           ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(39): @keyframes grow { to { --spacing: var(--spacing); } } 1`] = `

  1 | @keyframes grow { to { --spacing: var(--spacing); } }

`;

exports[`invalid(39): @keyframes grow { to { --spacing: var(--spacing); } } 2`] = `

Message:
> 1 | @keyframes grow { to { --spacing: var(--spacing); } }
    |                                       ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(4): a { --a: var(--base, var(--b)); --b: var(--a); } 1`] = `

  1 | a { --a: var(--base, var(--b)); --b: var(--a); }

`;

exports[`invalid(4): a { --a: var(--base, var(--b)); --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(--base, var(--b)); --b: var(--a); }
    |                          ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(4): a { --a: var(--base, var(--b)); --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(--base, var(--b)); --b: var(--a); }
    |                                          ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(40): @supports (--spacing: var(--spacing)) { a { --spacing: var(--spacing); } } 1`] = `

  1 | @supports (--spacing: var(--spacing)) { a { --spacing: var(--spacing); } }

`;

exports[`invalid(40): @supports (--spacing: var(--spacing)) { a { --spacing: var(--spacing); } } 2`] = `

Message:
> 1 | @supports (--spacing: var(--spacing)) { a { --spacing: var(--spacing); } }
    |                                                            ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(41): @container style(--spacing: var(--spacing)) { a { --spacing: var(--spacing); } } 1`] = `

  1 | @container style(--spacing: var(--spacing)) { a { --spacing: var(--spacing); } }

`;

exports[`invalid(41): @container style(--spacing: var(--spacing)) { a { --spacing: var(--spacing); } } 2`] = `

Message:
> 1 | @container style(--spacing: var(--spacing)) { a { --spacing: var(--spacing); } }
    |                                                                  ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(42): a { --spacing: if(style(--enabled: yes): 1px; else: var(--spacing)); } 1`] = `

  1 | a { --spacing: if(style(--enabled: yes): 1px; else: var(--spacing)); }

`;

exports[`invalid(42): a { --spacing: if(style(--enabled: yes): 1px; else: var(--spacing)); } 2`] = `

Message:
> 1 | a { --spacing: if(style(--enabled: yes): 1px; else: var(--spacing)); }
    |                                                         ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(43): a { --spacing: {value: [var(--spacing)]}; } 1`] = `

  1 | a { --spacing: {value: [var(--spacing)]}; }

`;

exports[`invalid(43): a { --spacing: {value: [var(--spacing)]}; } 2`] = `

Message:
> 1 | a { --spacing: {value: [var(--spacing)]}; }
    |                             ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(44): a { --spacing: v\\61r(--spacing); } 1`] = `

  1 | a { --spacing: v\\61r(--spacing); }

`;

exports[`invalid(44): a { --spacing: v\\61r(--spacing); } 2`] = `

Message:
> 1 | a { --spacing: v\\61r(--spacing); }
    |                      ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(45): a { --sp\\61 cing: var(--spacing); } 1`] = `

  1 | a { --sp\\61 cing: var(--spacing); }

`;

exports[`invalid(45): a { --sp\\61 cing: var(--spacing); } 2`] = `

Message:
> 1 | a { --sp\\61 cing: var(--spacing); }
    |                       ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(46): a { --spacing: var(--sp\\61 cing); } 1`] = `

  1 | a { --spacing: var(--sp\\61 cing); }

`;

exports[`invalid(46): a { --spacing: var(--sp\\61 cing); } 2`] = `

Message:
> 1 | a { --spacing: var(--sp\\61 cing); }
    |                    ^^^^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(47): a { \\2d\\2d spacing: var(--spacing); } 1`] = `

  1 | a { \\2d\\2d spacing: var(--spacing); }

`;

exports[`invalid(47): a { \\2d\\2d spacing: var(--spacing); } 2`] = `

Message:
> 1 | a { \\2d\\2d spacing: var(--spacing); }
    |                         ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.

`;

exports[`invalid(48): a { --間隔: var(--間隔); } 1`] = `

  1 | a { --間隔: var(--間隔); }

`;

exports[`invalid(48): a { --間隔: var(--間隔); } 2`] = `

Message:
> 1 | a { --間隔: var(--間隔); }
    |               ^^^^ Custom property \`--間隔\` must not reference itself.

`;

exports[`invalid(49): a {\n\t--spacing: calc(\n\t\tvar(--spacing) + 1px\n\t);\n} 1`] = `

  1 | a {
  2 | 	--spacing: calc(
  3 | 		var(--spacing) + 1px
  4 | 	);
  5 | }

`;

exports[`invalid(49): a {\n\t--spacing: calc(\n\t\tvar(--spacing) + 1px\n\t);\n} 2`] = `

Message:
  1 | a {
  2 | 	--spacing: calc(
> 3 | 		var(--spacing) + 1px
    | 		    ^^^^^^^^^ Custom property \`--spacing\` must not reference itself.
  4 | 	);
  5 | }

`;

exports[`invalid(5): a { --base: 1px; --a: var(--base, calc(var(--other, var(--b)) + 1px)); --b: var(--a); } 1`] = `

  1 | a { --base: 1px; --a: var(--base, calc(var(--other, var(--b)) + 1px)); --b: var(--a); }

`;

exports[`invalid(5): a { --base: 1px; --a: var(--base, calc(var(--other, var(--b)) + 1px)); --b: var(--a); } 2`] = `

Message:
> 1 | a { --base: 1px; --a: var(--base, calc(var(--other, var(--b)) + 1px)); --b: var(--a); }
    |                                                         ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(5): a { --base: 1px; --a: var(--base, calc(var(--other, var(--b)) + 1px)); --b: var(--a); } 3`] = `

Message:
> 1 | a { --base: 1px; --a: var(--base, calc(var(--other, var(--b)) + 1px)); --b: var(--a); }
    |                                                                                 ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(6): a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); } 1`] = `

  1 | a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); }

`;

exports[`invalid(6): a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); } 2`] = `

Message:
> 1 | a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(6): a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); } 3`] = `

Message:
> 1 | a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); }
    |                                      ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(6): a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); } 4`] = `

Message:
> 1 | a { --a: var(--b) var(--c); --b: var(--a); --c: var(--b); }
    |                                                     ^^^ Custom property \`--c\` is part of a dependency cycle.

`;

exports[`invalid(7): a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); } 1`] = `

  1 | a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); }

`;

exports[`invalid(7): a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); } 2`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(7): a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); } 3`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); }
    |                             ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(7): a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); } 4`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); }
    |                                            ^^^ Custom property \`--c\` is part of a dependency cycle.

`;

exports[`invalid(7): a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); } 5`] = `

Message:
> 1 | a { --a: var(--b); --b: var(--a); --c: var(--d); --d: var(--c); }
    |                                                           ^^^ Custom property \`--d\` is part of a dependency cycle.

`;

exports[`invalid(8): a { --a: var(--b) !important; --a: 1px; --b: var(--a); } 1`] = `

  1 | a { --a: var(--b) !important; --a: 1px; --b: var(--a); }

`;

exports[`invalid(8): a { --a: var(--b) !important; --a: 1px; --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: var(--b) !important; --a: 1px; --b: var(--a); }
    |              ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(8): a { --a: var(--b) !important; --a: 1px; --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: var(--b) !important; --a: 1px; --b: var(--a); }
    |                                                  ^^^ Custom property \`--b\` is part of a dependency cycle.

`;

exports[`invalid(9): a { --a: 1px; --a: var(--b) !important; --b: var(--a); } 1`] = `

  1 | a { --a: 1px; --a: var(--b) !important; --b: var(--a); }

`;

exports[`invalid(9): a { --a: 1px; --a: var(--b) !important; --b: var(--a); } 2`] = `

Message:
> 1 | a { --a: 1px; --a: var(--b) !important; --b: var(--a); }
    |                        ^^^ Custom property \`--a\` is part of a dependency cycle.

`;

exports[`invalid(9): a { --a: 1px; --a: var(--b) !important; --b: var(--a); } 3`] = `

Message:
> 1 | a { --a: 1px; --a: var(--b) !important; --b: var(--a); }
    |                                                  ^^^ Custom property \`--b\` is part of a dependency cycle.

`;
